# Synthetic-US-Tax-Dataset-Generator

./: .gitignore  README.md  generate_tax_datasets.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: boss_closeout_checklist.md  final_requirement_audit.md  intake_checklist.md  linkedin_post.md  missing_templates_and_sources.md  resume_project_summary.md  template_field_inventory.json
src/synthetic_tax_dataset_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/synthetic_tax_generator/: __init__.py  cli.py  generator.py  models.py  pdf_renderer.py  pdf_utils.py  tax_logic.py  template_filler.py  template_mapping.py
tools/: analyze_sample_package.py  check_workspace_readiness.py  export_template_inventory.py  inspect_pdf_templates.py  requirement_audit.py  split_into_weekly_batches.py
