[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-tax-dataset-generator"
version = "0.1.0"
description = "Generate synthetic US individual tax dataset folders with consistent PDF outputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.44",
    "pypdf>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
